syntax = "proto3";

// 命 令 号: 2000
// 命令名称: intelligent_devscript_exec
// 命令描述: 运行指定脚本
// 文件名称: d2c2000_intelligent_dev_script_exec.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbIntelligentDevscriptExec";

message IntelligentDevscriptExecRequest {
  // ATTR: REQUSET
  string file_name = 1;  // 文件名
}

message IntelligentDevscriptExecResponse {
  // ATTR: REQACK
  enum error_t {  // 错误类型
    ERR_OK = 0;
    ERR_NO_FILE = 1;
    ERR_BUSY = 2;
    ERR_OTHER = 3;
  }
  error_t error = 1;
}
